switched to jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ html(lang="en")
     - }
     p.
       Voit lisätä uuden käyttäjän seuraavanlaisella
-      a(href="http://curl.haxx.se/") curl -komennolla:
+      <a href="http://curl.haxx.se/"> curl </a>-komennolla:
     pre. 
       curl -X POST http://#{host}/api/user -H 'Content-Type: application/json' -d '{"username": "teemu"}'
     p.
