--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -1,9 +1,34 @@
 extends layout
 
 block content
-	h1.
-		User List
+	h1= title
+	p This is the list of the users
+
+	h2 Creating a new user
+	form(action="/users/create", method="post")
+		input(type="text", name="username")
+		input(type="submit")
+
+	h2 Users
+
 	ul
-		each user, i in users
+		each user in users
 			li
-				a(href="mailto:#{user.email}")= user.username
+				= user.username
+				|
+				| (
+				a(href="/users/" + user.id + "/destroy") Destroy
+				| )
+				ul
+					li
+						| Creating a new post:
+						form(action="/users/" + user.id + "/posts/create", method="post", style="display:inline")
+							input(type="text", name="text")
+							input(type="submit")
+					each post in user.Posts
+						li
+							= post.text
+							|
+							| (
+							a(href="/users/" + user.id + "/posts/" + post.id + "/destroy") Destroy
+							| )
