--- a/views/statusUpdate.jade
+++ b/views/statusUpdate.jade
@@ -8,8 +8,8 @@ html(lang="en")
     .projects
       .container
         h2 Interactive Website: Status Update
-        .row
-          .col-md-5.text-justify
+        .row.text-justify
+          .col-md-5
             h3 Status Update
             p CodeAcademy's very own course Interactive Website: Status Update. Got to learn and make a status update tool similar to ones on Facebook and Twitter. Pretty neat.<br><br> All in all, I think this was a nice practice. Unfortunately I don't have any kind of database here yet so I probably can't save the updates anywhere... A database would be nice help to keep track of all links and stuff in navigation bar etc. as well I suppose.<br><br> I did my best to understand the code. The only thing I am having slight difficulties so far is the damn CSS to get the stuff look as good as it can look. Also bootstrap has some mysterious classes and stuff I'm not exactly sure how you can use them or what they are for. We'll see... We will see... The next part of the CodeAcademy course is "Effects".
           .col-md-7
