--- a/views/projects.jade
+++ b/views/projects.jade
@@ -7,7 +7,7 @@ html(lang="en")
     .favourites
       .container
         h2 Some exercises on web programming
-        .row.text-justified
+        .row.text-justify
           .col-md-4
             div
               h3 Status Update
