--- a/views/statusUpdate.jade
+++ b/views/statusUpdate.jade
@@ -2,27 +2,37 @@ doctype html
 html(lang="en")
   include head.jade
   body
-    include nav.jade
-    script(src='/javascripts/statusUpdate.js')
-    
-    .projects
-      .container
-        h2 Interactive Website: Status Update
-        .row.text-justify
-          .col-md-5
-            h3 Status Update
-            p CodeAcademy's very own course Interactive Website: Status Update. Got to learn and make a status update tool similar to ones on Facebook and Twitter. Pretty neat.<br><br> All in all, I think this was a nice practice. Unfortunately I don't have any kind of database here yet so I probably can't save the updates anywhere... A database would be nice help to keep track of all links and stuff in navigation bar etc. as well I suppose.<br><br> I did my best to understand the code. The only thing I am having slight difficulties so far is the damn CSS to get the stuff look as good as it can look. Also bootstrap has some mysterious classes and stuff I'm not exactly sure how you can use them or what they are for. We'll see... We will see... The next part of the CodeAcademy course is "Effects".
-          .col-md-7
-            form(method="post", action="/posts/create")
-              .form-group
-                input.form-control.status-box(name='text', type='text', rows='2', placeholder='Repent and announce your sins to this gadget.')
-              .button-group.pull-right
-                p.counter 140
-                button.btn.btn-primary(type='submit') Post
-            ul.posts
-            each post in posts
-              li
-                = post.text
+    h1= title
+    p This is Sequelize greeting you :)
+
+    h2 Creating a new user
+    form(action="/users/create", method="post")
+      input(type="text", name="username")
+      input(type="submit")
+
+    h2 Users
+
+    ul
+    each user in users
+      li
+        = user.username
+        | &nbsp;
+        | (
+        a(href="/users/" + user.id + "/destroy") Destroy
+        | )
+        ul
+          li
+            | Creating a new post:
+            form(action="/users/" + user.id + "/posts/create", method="post", style="display: inline")
+              input(type="text", name="text")
+              input(type="submit")
+          each post in user.Posts
+            li
+              = post.text
+              | &nbsp;
+              | (
+              a(href="/users/" + user.id + "/posts/" + post.id + "/destroy") Destroy
+              | )
 
  
     include disclaimer.jade
