--- a/views/statusUpdate.jade
+++ b/views/statusUpdate.jade
@@ -24,11 +24,11 @@ html(lang="en")
           li
             | Creating a new post:
             form(action="/users/" + user.id + "/posts/create", method="post", style="display: inline")
-              input(type="text", name="text")
+              input(type="text", name="update")
               input(type="submit")
           each post in user.Posts
             li
-              = post.text
+              = post.update
               | &nbsp;
               | (
               a(href="/users/" + user.id + "/posts/" + post.id + "/destroy") Destroy
