--- a/views/index.jade
+++ b/views/index.jade
@@ -22,3 +22,5 @@ html(lang="en")
       Windowsissa pitää käyttää vähän ylimääräisiä kenoviivoja:
     pre. 
       curl -X POST http://#{host}/api/user -H 'Content-Type: application/json' -d '{\"username\": \"teemu\"}'
+    p.
+      Click here to login a<href='/login'> LOGIN </a>
