--- a/views/index.jade
+++ b/views/index.jade
@@ -23,4 +23,4 @@ html(lang="en")
     pre. 
       curl -X POST http://#{host}/api/user -H 'Content-Type: application/json' -d '{\"username\": \"teemu\"}'
     p.
-      Click here to login a<href='/login'> LOGIN </a>
+      Click here to <a href='/login'> LOGIN </a>
