--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,27 @@
 h1.tamplr-logo {
   font-family: 'Bree Serif', serif;
-  color: violet ;
+  color: violet;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0;
+  font-size: 2.25em;
+  font-family: 'Josefin Slab', serif; 
+  font-weight: 700;
+}
+
+h1.tamplr-logo2 {
+  font-family: 'Bree Serif', serif;
+  color: violet;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0;
+  font-size: 2.25em;
+  font-family: 'Josefin Slab', serif; 
+  font-weight: 400;
 }
 
 h1.tamplr-logo:after {
@@ -9,4 +30,144 @@ h1.tamplr-logo:after {
   right: 0.1em;
 }
 
+.dropdown-toggle p {
+	text-align: center;
+	font-size: 2.25em;
+	font-family: 'Josefin Slab', serif;
+	font-weight: 400;
+	padding: 0;
+	margin: 0;
+}
 
+.navigation {
+/*  padding-top: 4px;
+  padding-bottom: 4px;*/
+	border-bottom: 1px solid #99CCFF;
+}
+
+.bloglist, .login, .user, .onlineUsers{
+  margin-top: 64px;
+  /*background-color: #FFFFFF;
+  border-bottom: 1px solid #dbdbdb;*/
+  background-color: #FFFFFF;
+  border: 1px solid #2EB8E6;
+  border-radius: 5px;
+  padding: 0px;
+}
+
+#newPostForm {
+  width: 95%;
+  text-align: left;
+  margin-left: 2.5%;
+}
+
+.user{
+  margin-left: -5px;
+  margin-right: 5px;
+}
+
+.onlineUsers {
+  margin-left: 5px;
+  margin-right: -5px;
+}
+
+.user p, .onlineUsers p {
+  padding: 0px 10px 0px 10px;
+}
+
+.bloglist>h2, .bloglist>h4, .user>h4, .onlineUsers>h4{
+  text-align: center;
+  margin-top: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #dbdbdb;
+}
+
+.postlist {
+  /*border: 1px solid;
+  border-radius: 15px;
+  padding: 0px;*/
+  margin-top: 64px;
+  background-color: #FFFFFF;
+  border: 1px solid #2EB8E6;
+  border-radius: 5px;
+  padding: 0px;
+}
+
+.postlist h1 {
+  font-family: 'Josefin Slab', serif;
+}
+
+.jumbotron {
+	height: 180px;
+  margin-top: 59px;
+	margin-bottom: 0;
+  padding-right: 0;
+  padding-left: 0;
+  background-color: #8AB8E6;
+}
+
+.jumbotron .container {
+	position: relative;
+	top: 0px;
+}
+
+.jumbotron a {
+    font-size: 1.25em;
+    color: #00b0ff;
+}
+
+.jumbotron h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+  -webkit-font-smoothing: antialiased;
+  text-shadow:  0 1px 8px rgba(0, 0, 0, 0.6);
+	color: #fff;
+	font-size: 3em;  
+	font-family: 'Shift', sans-serif;
+	font-weight: bold;
+  padding-left: 5px;
+}
+
+.jumbotron p {
+	font-size: 1.25em;
+	color: #fff;
+  padding-left: 5px;    
+  margin-top: 0;
+  text-shadow:  0 -1px 1px rgba(0, 0, 0, 0.6);
+}
+
+.post {
+  /*background-color: #efefef;
+  margin: 5px;*/
+  padding: 5px 15px 5px 20px;
+  font-family: Consolas, monospace;
+  font-size: 1.25em;
+  color: black;
+  border-bottom: 1px solid #dbdbdb;
+}
+
+.post h4 {
+  padding-bottom: 2px;
+  /*border-bottom: 1px solid #dbdbdb;*/
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.post footer {
+  padding-top: 2px;
+}
+
+.post p {
+  font-size: 0.9375em;
+  margin-bottom: 5px;
+  padding-top: 5px;
+}
+
+.post #post {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.post #likes {
+  border-top: 1px solid #dbdbdb;
+}
